2007-11-28 [colin]	3.1.0cvs42

	* src/folderview.c
		Fix mark all read from folder's contextual menu

2007-11-27 [colin]	3.1.0cvs41

	* src/imap.c
	* src/imap.h
	* src/imap_gtk.c
	* src/prefs_account.c
	* src/etpan/imap-thread.c
		A few fixes to the IMAP flags handling: Optimisations,
		two crashers, mention that Bandwitdh-efficient mode
		prevents tag fetching.
		Fix M-UTF7 in subscription dialog.

2007-11-27 [colin]	3.1.0cvs40

	* src/folder.c
	* src/mbox.c
	* src/summaryview.c
		Make filtering faster on flags change: Batch original 
		folderitem, where we'll do flags/tags changes.

2007-11-27 [colin]	3.1.0cvs39

	* src/filtering.c
		Fix bug 1407, 'After a copy action, further rules apply 
		to both original and copy'

2007-11-27 [colin]	3.1.0cvs38

	* src/edittags.c
	* src/summaryview.c
		Fixes races when doing a long operation and user
		asks for another one (Mark all read/unread on a 
		big folder on IMAP for example)

2007-11-27 [wwp]	3.1.0cvs37

	* src/addressbook.c
	* src/prefs_common.c
		Fix warning introduced by 3.1.0cvs33 (prefs_common.c)
		and 3.1.0cvs35 (addressbook.c).

2007-11-27 [holger]	3.1.0cvs36

	* src/printing.c
		Add a line separating header and body
		in the printout

2007-11-27 [wwp]	3.1.0cvs35

	* src/addressbook.c
		Fix a drag-and-drop issue introduced with 3.1.0cvs33
		(thanks to Colin) and revert disabling of cut/copy
		context menu entries upon selected groups.

2007-11-27 [holger]	3.1.0cvs34

	* src/printing.c
		Add weights to the list of supported text attributes
		for printing

2007-11-27 [wwp]	3.1.0cvs33

	* src/Makefile.am
	* src/addrcustomattr.c
	* src/addrcustomattr.h
	* src/addressbook.c
	* src/editaddress.c
	* src/editaddress.h
	* src/prefs_common.c
	* src/prefs_common.h
	* src/common/defs.h
		Provide a (customizable) list of preset attribute names
		for editing contacts (closes bug #1391).

2007-11-27 [wwp]	3.1.0cvs32

	* src/addrclip.c
	* src/addressbook.c
	* src/addritem.c
		Various fixes in the address book: