@@ -3100,3 +3100,4 @@
 ( cvs diff -u -r 1.213.2.169 -r 1.213.2.170 src/folder.c;  cvs diff -u -r 1.28.2.41 -r 1.28.2.42 src/mbox.c;  cvs diff -u -r 1.395.2.341 -r 1.395.2.342 src/summaryview.c;  ) > 3.1.0cvs40.patchset
 ( cvs diff -u -r 1.179.2.201 -r 1.179.2.202 src/imap.c;  cvs diff -u -r 1.34.2.18 -r 1.34.2.19 src/imap.h;  cvs diff -u -r 1.1.2.52 -r 1.1.2.53 src/imap_gtk.c;  cvs diff -u -r 1.105.2.117 -r 1.105.2.118 src/prefs_account.c;  cvs diff -u -r 1.1.4.89 -r 1.1.4.90 src/etpan/imap-thread.c;  ) > 3.1.0cvs41.patchset
 ( cvs diff -u -r 1.207.2.188 -r 1.207.2.189 src/folderview.c;  ) > 3.1.0cvs42.patchset
+( cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/prefs_summary_open.c;  ) > 3.1.0cvs43.patchset
